feat: added feature to upload multiple images
